--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "TodoApp",
+  "short_name": "ToDo",
+  "theme_color": "#2196f3",
+  "background_color": "#2196f3",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/main",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "Smile.jpg",
+      "sizes": "72*72 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
@@ -17,9 +22,5 @@
       "type": "image/png",
       "sizes": "512x512"
     }	    
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
