--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
     "react-datepicker": "^2.9.4",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "axios": "^0.19.0",
+    "react-uuid": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
